@@ -1,80 +1,258 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
+  <!-- Tycho requires Maven 3 -->
+  <prerequisites>
+    <maven>3.0</maven>
+  </prerequisites>
+
   <groupId>org.eclipse.xtext.xdoc</groupId>
   <artifactId>org.eclipse.xtext.xdoc.parent</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Xdoc</name>
+
   <properties>
-    <tycho.version>0.10.0</tycho.version>
+    <tycho-version>0.15.0</tycho-version>
+    <junit-version>4.8.1</junit-version>
+    <xtend-version>2.3.1</xtend-version>
+    <fornax-version>3.4.0</fornax-version>
+    <eclipse-version>juno</eclipse-version>
+    <orbit-version>R20110523182458</orbit-version>
+    <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
   </properties>
+
   <modules>
     <module>org.eclipse.xtext.xdoc</module>
-    <module>org.eclipse.xtext.xdoc.generator</module>
     <module>org.eclipse.xtext.xdoc.ui</module>
+    <module>org.eclipse.xtext.xdoc.tests</module>
     <module>org.eclipse.xtext.xdoc.feature</module>
-    <module>org.eclipse.xtext.xdoc.releng</module>
-<!--    <module>org.eclipse.xtext.xdoc.tests</module> -->
+    <module>org.eclipse.xtext.xdoc.feature.source</module>
+    <module>org.eclipse.xtext.xdoc.updatesite</module>
   </modules>
+
   <repositories>
     <repository>
-      <id>emf</id>
+      <id>eclipse</id>
       <layout>p2</layout>
-      <url>http://download.eclipse.org/modeling/emf/updates/releases/</url>
-    </repository>
+      <url>http://download.eclipse.org/releases/${eclipse-version}</url>
+    </repository> 
     <repository>
-      <id>xpand</id>
-      <layout>p2</layout>
-      <url>https://hudson.eclipse.org/hudson/job/Xpand-nightly-HEAD/lastSuccessfulBuild/artifact/xpand.p2.repository/</url>
-    </repository>
-    <repository>
-      <id>xtext</id>
-      <layout>p2</layout>
-      <url>https://hudson.eclipse.org/hudson/job/Xtext-nightly-HEAD/lastSuccessfulBuild/artifact/xtext.p2.repository/</url>
-    </repository>
-    <repository>
-      <id>xtend2</id>
-      <layout>p2</layout>
-      <url>https://hudson.eclipse.org/hudson/job/xtend-head/lastSuccessfulBuild/artifact/xtend.p2.repository/</url>
-    </repository>
-    <repository>
-      <id>mwe2lang</id>
-      <layout>p2</layout>
-      <url>https://hudson.eclipse.org/hudson/job/MWE-Language-nightly-HEAD/lastSuccessfulBuild/artifact/mwe2lang.p2.repository/</url>
-    </repository>
-    <repository>
-      <id>mwe2</id>
-      <layout>p2</layout>
-      <url>https://hudson.eclipse.org/hudson/job/MWE-nightly-HEAD/lastSuccessfulBuild/artifact/mwe.p2.repository/</url>
-    </repository>
-    <repository>
-      <id>mwe</id>
-      <layout>p2</layout>
-      <url>https://hudson.eclipse.org/hudson/job/MWE-nightly-Maintenance/lastSuccessfulBuild/artifact/mwe.p2.repository/</url>
-    </repository>
-    <repository>
-      <id>antlrruntime</id>
-      <layout>p2</layout>
-      <url>file:${project.basedir}/../org.antlr.runtime-site</url>
-    </repository>
-    <repository>
-      <id>antlrgenerator</id>
-      <layout>p2</layout>
-      <url>http://download.itemis.com/updates/nightly/site</url>
-    </repository>
-    <!--<repository>
       <id>orbit</id>
       <layout>p2</layout>
-      <url>http://download.eclipse.org/tools/orbit/downloads/drops/R20100519200754/repository/</url>
-    </repository>-->
+      <url>http://download.eclipse.org/tools/orbit/downloads/drops/${orbit-version}/repository/</url>
+    </repository> 
     <repository>
-      <id>eclipse-galileo</id>
+      <id>itemis</id>
       <layout>p2</layout>
-      <url>http://download.eclipse.org/releases/galileo</url>
+      <url>http://download.itemis.com/updates/releases/2.0.0/</url>
     </repository>
   </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>sonatype</id>
+      <url>http://repository.sonatype.org/content/groups/sonatype-public-grid/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>fornax</id>
+      <url>http://www.fornax-platform.org/m2/repository</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>xtend</id>
+      <url>http://build.eclipse.org/common/xtend/maven/</url>
+    </pluginRepository>
+  </pluginRepositories>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-maven-plugin</artifactId>
+        <version>${tycho-version}</version>
+        <extensions>true</extensions>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>target-platform-configuration</artifactId>
+        <version>${tycho-version}</version>
+        <configuration>
+          <resolver>p2</resolver>
+          <pomDependencies>consider</pomDependencies>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-source-plugin</artifactId>
+        <version>${tycho-version}</version>
+        <executions>
+          <execution>
+            <id>attach-source</id>
+            <goals>
+              <goal>plugin-source</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>      
+    </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-compiler-plugin</artifactId>
+          <version>${tycho-version}</version>
+          <configuration>
+            <encoding>ISO-8859-1</encoding>
+            <source>6.0</source>
+            <target>6.0</target>
+            <excludeResources>
+              <exludeResource>**/*.xtend</exludeResource>
+            </excludeResources>           
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-surefire-plugin</artifactId>
+          <version>${tycho-version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>maven-osgi-test-plugin</artifactId>
+          <version>${tycho-version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-p2-repository-plugin</artifactId>
+          <version>${tycho-version}</version>
+        </plugin>
+        <!-- APACHE MAVEN PLUGINS -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>2.4.1</version>
+          <configuration>
+            <encoding>ISO-8859-1</encoding>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.3</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-clean-plugin</artifactId>
+          <version>2.4.1</version>
+          <configuration>
+            <filesets>
+              <fileset>
+                <directory>${basedir}/xtend-gen</directory>
+                <includes>
+                    <include>**</include>
+                </includes>                            
+                <excludes>
+                  <exclude>.gitignore</exclude>
+                </excludes>
+              </fileset>
+              <fileset>
+                <directory>${basedir}/src-gen</directory>
+                <includes>
+                    <include>**</include>
+                </includes>                            
+                <excludes>
+                  <exclude>.gitignore</exclude>
+                </excludes>
+              </fileset>
+              <fileset>
+                <directory>${basedir}/emf-gen</directory>
+                <includes>
+                    <include>**</include>
+                </includes>                            
+                <excludes>
+                  <exclude>.gitignore</exclude>
+                </excludes>
+              </fileset>
+              <fileset>
+                <directory>${basedir}/test-gen</directory>
+                <includes>
+                    <include>**</include>
+                </includes>                            
+                <excludes>
+                  <exclude>.gitignore</exclude>
+                </excludes>
+              </fileset>
+            </filesets>
+          </configuration>          
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.2-beta-4</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-release-plugin</artifactId>
+          <configuration>
+            <preparationGoals>clean -DnewVersion=${releaseVersion}
+              -Dprudent=true
+              org.eclipse.tycho:tycho-versions-plugin:set-version
+              verify
+              scm:checkin</preparationGoals>
+            <arguments>-Prelease</arguments>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <version>1.3</version>
+          <executions>
+            <execution>
+              <id>add-source</id>
+              <phase>generate-sources</phase>
+              <goals>
+                <goal>add-source</goal>
+              </goals>
+              <configuration>
+                <sources>
+                  <source>${project.build.directory}/src-gen</source>
+                </sources>
+                <sources>
+                  <source>${project.build.directory}/emf-gen</source>
+                </sources>                
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.fornax.toolsupport</groupId>
+          <artifactId>fornax-oaw-m2-plugin</artifactId>
+          <version>${fornax-version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.xtend</groupId>
+          <artifactId>xtend-maven-plugin</artifactId>
+          <version>${xtend-version}</version>
+          <configuration>
+            <!-- need to prefix by basedir to generate to currently built module -->
+            <outputDirectory>${basedir}/xtend-gen</outputDirectory>
+          </configuration>
+        </plugin>       
+      </plugins>
+    </pluginManagement>
+  </build>
+            
   <profiles>
     <profile>
       <id>sign</id>
@@ -103,53 +281,73 @@
         </pluginManagement>
       </build>
     </profile>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.sonatype.tycho</groupId>
+            <artifactId>maven-osgi-packaging-plugin</artifactId>
+            <configuration>
+              <strictVersions>false</strictVersions>
+            </configuration>
+          </plugin>
+          <plugin>
+            <artifactId>maven-scm-plugin</artifactId>
+            <configuration>
+              <basedir>${basedir}</basedir>
+              <includes>${basedir}/../feature/feature.xml,${basedir}/../site/site.xml,${basedir}/repository/category.xml</includes>
+              <message>[maven-release-plugin] prepare release of OSGI artifacts</message>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>skip-ui-tests</id>
+      <activation>
+        <property>
+          <name>skip-ui-tests</name>
+        </property>
+      </activation>
+      <properties>
+        <tycho.surefire.skipUiTest>true</tycho.surefire.skipUiTest>
+      </properties>
+    </profile>
+    <profile>
+      <id>macosx</id>
+      <activation>
+        <os>
+          <name>mac os x</name>
+          <family>mac</family>
+        </os>
+      </activation>
+      <properties>
+        <ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
+      </properties>
+    </profile>
+    <profile>
+      <id>other-os</id>
+      <activation>
+        <os>
+          <name>not-mac</name>
+          <family>!mac</family>
+        </os>
+      </activation>
+      <properties>
+        <ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
+      </properties>
+    </profile>
   </profiles>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.sonatype.tycho</groupId>
-        <artifactId>tycho-maven-plugin</artifactId>
-        <version>${tycho.version}</version>
-        <extensions>true</extensions>
-      </plugin>
-      <plugin>
-        <groupId>org.sonatype.tycho</groupId>
-        <artifactId>target-platform-configuration</artifactId>
-        <version>${tycho.version}</version>
-        <configuration>
-          <resolver>p2</resolver>
-        </configuration>
-      </plugin>
-    </plugins>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>2.3.1</version>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.tycho</groupId>
-          <artifactId>maven-osgi-packaging-plugin</artifactId>
-          <version>${tycho.version}</version>
-          <executions>
-            <execution>
-              <id>timestamp</id>
-              <phase>validate</phase>
-              <goals>
-                <goal>timestamp</goal>
-              </goals>
-            </execution>
-          </executions>
-          <!-- for some reason configuration won't work here, have to define
-            in each module -->
-          <configuration>
-            <archive>
-              <addMavenDescriptor>false</addMavenDescriptor>
-            </archive>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit-version}</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>    
 </project>
